@@ -3,17 +3,19 @@ package com.leafy.diagnosis.service;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.leafy.diagnosis.domain.DiagnosisHistory;
+import com.leafy.diagnosis.dto.DiagnosisResponseDto;
 import com.leafy.diagnosis.dto.PlantIdRequestDto;
 import com.leafy.diagnosis.dto.PlantIdResponseDto;
 import com.leafy.diagnosis.repository.DiagnosisHistoryRepository;
-import com.leafy.diagnosis.dto.DiagnosisResponseDto;
 import com.leafy.global.storage.S3UploadService;
 import com.leafy.global.type.DiagnosisFeedbackStep;
 import com.leafy.plant.domain.MyPlant;
 import com.leafy.plant.repository.MyPlantRepository;
-import jakarta.persistence.EntityNotFoundException;
+import com.leafy.user.domain.User;
+import com.leafy.user.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
-import org.springframework.beans.factory.annotation.Value;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
@@ -23,126 +25,172 @@ import java.io.IOException;
 import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.util.Base64; // Base64 import 추가
+import java.util.Base64;
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
 @Transactional
 public class DiagnosisService {
 
-    @Value("${PLANT_ID_API_KEY}")
-    private String plantIdApiKey;
     private final WebClient plantIdWebClient;
     private final S3UploadService s3UploadService;
     private final DiagnosisHistoryRepository diagnosisHistoryRepository;
     private final MyPlantRepository myPlantRepository;
+    private final UserRepository userRepository;
     private final ObjectMapper objectMapper;
 
     /**
-     * 식물 건강 진단 (S3 URL 대신 Base64 데이터 전송으로 변경)
+     * 식물 건강 진단 요청 및 저장
      */
     public PlantIdResponseDto diagnosePlant(Long myPlantId, MultipartFile imageFile, Double lat, Double lon) throws IOException {
 
-        // 1. MyPlant 조회
+        // 1. 사용자 및 식물 소유권 검증
+        String principalName = SecurityContextHolder.getContext().getAuthentication().getName();
+        User currentUser = userRepository.findByEmail(principalName)
+                .orElseThrow(() -> new RuntimeException("User not found"));
+
         MyPlant myPlant = myPlantRepository.findById(myPlantId)
-                .orElseThrow(() -> new EntityNotFoundException("MyPlant not found: " + myPlantId));
+                .orElseThrow(() -> new RuntimeException("Plant not found"));
 
-        // 2. S3 업로드 (DB 저장 및 이력 관리용)
+        if (!myPlant.getUser().getUserId().equals(currentUser.getUserId())) {
+            throw new RuntimeException("Not authorized access to this plant");
+        }
+
+        // 2. S3 업로드
         String s3ImageUrl = s3UploadService.upload(imageFile, "diagnosis");
+        log.info("Diagnosis Image Uploaded: {}", s3ImageUrl);
 
-        // 3. [수정됨] Plant.id API 전송용 Base64 변환
-        // URL 접근 권한 문제를 피하기 위해 파일 자체를 인코딩해서 보냅니다.
+        // 3. Base64 변환
         String base64Data = Base64.getEncoder().encodeToString(imageFile.getBytes());
         String base64Image = "data:" + imageFile.getContentType() + ";base64," + base64Data;
 
-        // 4. 요청 DTO 생성 (Base64 + health="all")
+        // 4. 외부 API 요청
         PlantIdRequestDto requestBody = new PlantIdRequestDto(
-                List.of(base64Image), // Base64 문자열 전송
+                Collections.singletonList(base64Image),
                 lat,
                 lon,
-                true,  // similar_images
-                "all"  // health check
+                true,
+                "all"
         );
 
-        // 5. Plant.id API 호출
-        PlantIdResponseDto response = plantIdWebClient.post()
+        PlantIdResponseDto apiResponse = plantIdWebClient.post()
                 .uri(uriBuilder -> uriBuilder
-                        .path("/identification")
+                        .path("/health_assessment")
+                        .queryParam("details", "local_name,description,url,treatment,classification,common_names,cause")
                         .queryParam("language", "ko")
-                        // details 파라미터 제거 (API 기본값 사용)
                         .build())
                 .bodyValue(requestBody)
                 .retrieve()
                 .bodyToMono(PlantIdResponseDto.class)
                 .block();
 
-        // 6. 결과 저장
-        if (response != null && response.result() != null) {
-            try {
-                saveDiagnosisHistory(myPlant, s3ImageUrl, response);
-            } catch (JsonProcessingException e) {
-                throw new RuntimeException("Failed to save diagnosis history.", e);
+        // 5. 결과 저장
+        if (apiResponse != null && apiResponse.result() != null) {
+            saveDiagnosisHistory(myPlant, s3ImageUrl, apiResponse);
+        }
+
+        return apiResponse;
+    }
+
+    /**
+     * 진단 결과 DB 저장 로직
+     */
+    private void saveDiagnosisHistory(MyPlant myPlant, String imageUrl, PlantIdResponseDto response) {
+        try {
+            PlantIdResponseDto.Result result = response.result();
+
+            // 1. 질병 정보 추출 (Suggestions 리스트의 첫 번째 항목)
+            PlantIdResponseDto.DiseaseSuggestion topDisease = null;
+            if (result.disease() != null && result.disease().suggestions() != null && !result.disease().suggestions().isEmpty()) {
+                topDisease = result.disease().suggestions().get(0);
             }
+
+            // 2. 질병명 및 확률 매핑
+            String diseaseName = (topDisease != null) ? topDisease.name() : "Healthy";
+
+            // DTO 필드명: diseaseProbability (BigDecimal)
+            BigDecimal diseaseProb = (topDisease != null && topDisease.diseaseProbability() != null)
+                    ? topDisease.diseaseProbability() : BigDecimal.ZERO;
+
+            // 3. 치료법 JSON 변환
+            String solutionJson = null;
+            if (topDisease != null && topDisease.details() != null && topDisease.details().treatment() != null) {
+                solutionJson = objectMapper.writeValueAsString(topDisease.details().treatment());
+            }
+
+            // 4. 건강 여부 및 확률 매핑
+            // DTO 필드명: healthProbability (BigDecimal)
+            boolean isHealthyVal = (result.isHealthy() != null) && result.isHealthy().binary();
+
+            BigDecimal healthProb = (result.isHealthy() != null && result.isHealthy().healthProbability() != null)
+                    ? result.isHealthy().healthProbability() : BigDecimal.ZERO;
+
+            // 5. 식물 여부 확률 매핑
+            // DTO 필드명: isPlantProbability (BigDecimal)
+            BigDecimal isPlantProb = (result.isPlant() != null && result.isPlant().isPlantProbability() != null)
+                    ? result.isPlant().isPlantProbability() : BigDecimal.ZERO;
+
+            // 6. 엔티티 빌드 및 저장 (✅ 이 코드가 올바르다)
+            DiagnosisHistory history = DiagnosisHistory.builder()
+                    .myPlant(myPlant)
+                    .diagnosisDatetime(LocalDateTime.now())
+                    .requestImageUrl(imageUrl) // 매개변수로 받은 imageUrl 사용
+                    .apiAccessToken(response.accessToken())
+                    .isPlantProbability(isPlantProb)
+                    .isHealthy(isHealthyVal)
+                    .healthProbability(healthProb)
+                    .diseaseName(diseaseName)
+                    .diseaseProbability(diseaseProb)
+                    .solutionDetail(solutionJson)
+                    // D+2, D+5 날짜 정보는 여기서 추가되어야 한다 이다.
+                    .tipDate(LocalDate.now().plusDays(2))
+                    .checkDate(LocalDate.now().plusDays(5))
+                    .feedbackStep(DiagnosisFeedbackStep.NONE) // @Builder.Default 설정되어 있으나 명시적으로 지정
+                    .build();
+
+            diagnosisHistoryRepository.save(history);
+
+        } catch (JsonProcessingException e) {
+            log.error("Failed to parse treatment solution to JSON", e);
         }
 
-        return response;
+//        Boolean isHealthy = (result.isHealthy() != null) ? result.isHealthy().binary() : true;
+//        BigDecimal healthProbability = (result.isHealthy() != null) ? result.isHealthy().healthProbability() : null;
+//        BigDecimal isPlantProbability = (result.isPlant() != null) ? result.isPlant().isPlantProbability() : BigDecimal.ZERO;
+//
+//        LocalDate today = LocalDate.now();
+//
+//        // 엔티티 생성 및 저장
+//        DiagnosisHistory history = DiagnosisHistory.builder()
+//                .myPlant(myPlant)
+//                .diagnosisDatetime(LocalDateTime.now())
+//                .requestImageUrl(s3ImageUrl)
+//                .apiAccessToken(response.accessToken())
+//                .isPlantProbability(isPlantProbability)
+//                .isHealthy(isHealthy)
+//                .healthProbability(healthProbability)
+//                .diseaseName(diseaseName)
+//                .diseaseProbability(diseaseProbability)
+//                .solutionDetail(solutionDetail)
+//                .tipDate(today.plusDays(2))   // D+2
+//                .checkDate(today.plusDays(5)) // D+5
+//                .feedbackStep(DiagnosisFeedbackStep.NONE)
+//                .build();
+//
+//        diagnosisHistoryRepository.save(history);
     }
 
-    private void saveDiagnosisHistory(MyPlant myPlant, String s3ImageUrl, PlantIdResponseDto response) throws JsonProcessingException {
-        PlantIdResponseDto.Result result = response.result();
-
-        // 안전하게 데이터 추출
-        PlantIdResponseDto.Suggestion topSuggestion = null;
-        if (result.classification() != null && result.classification().suggestions() != null) {
-            topSuggestion = result.classification().suggestions().stream().findFirst().orElse(null);
-        }
-
-        PlantIdResponseDto.DiseaseSuggestion topDisease = null;
-        if (result.disease() != null && result.disease().suggestions() != null && !result.disease().suggestions().isEmpty()) {
-            topDisease = result.disease().suggestions().get(0);
-        }
-
-        // 값 할당
-        String diseaseName = (topDisease != null) ? topDisease.name() : null;
-        BigDecimal diseaseProbability = (topDisease != null) ? topDisease.diseaseProbability() : null;
-
-        String solutionDetail = null;
-        if (topDisease != null && topDisease.details() != null && topDisease.details().treatment() != null) {
-            solutionDetail = objectMapper.writeValueAsString(topDisease.details().treatment());
-        }
-
-        Boolean isHealthy = (result.isHealthy() != null) ? result.isHealthy().binary() : true;
-        BigDecimal healthProbability = (result.isHealthy() != null) ? result.isHealthy().healthProbability() : null;
-        BigDecimal isPlantProbability = (result.isPlant() != null) ? result.isPlant().isPlantProbability() : BigDecimal.ZERO;
-
-        LocalDate today = LocalDate.now();
-
-        // 엔티티 생성 및 저장
-        DiagnosisHistory history = DiagnosisHistory.builder()
-                .myPlant(myPlant)
-                .diagnosisDatetime(LocalDateTime.now())
-                .requestImageUrl(s3ImageUrl)
-                .apiAccessToken(response.accessToken())
-                .isPlantProbability(isPlantProbability)
-                .isHealthy(isHealthy)
-                .healthProbability(healthProbability)
-                .diseaseName(diseaseName)
-                .diseaseProbability(diseaseProbability)
-                .solutionDetail(solutionDetail)
-                .tipDate(today.plusDays(2))   // D+2
-                .checkDate(today.plusDays(5)) // D+5
-                .feedbackStep(DiagnosisFeedbackStep.NONE)
-                .build();
-
-        diagnosisHistoryRepository.save(history);
-    }
-
+    /**
+     * 식물별 진단 이력 조회
+     */
     @Transactional(readOnly = true)
     public List<DiagnosisResponseDto> findAllByMyPlantId(Long myPlantId) {
         MyPlant myPlant = myPlantRepository.findById(myPlantId)
-                .orElseThrow(() -> new EntityNotFoundException("MyPlant not found: " + myPlantId));
+                .orElseThrow(() -> new RuntimeException("MyPlant not found"));
 
         return diagnosisHistoryRepository.findAllByMyPlantOrderByDiagnosisDatetimeDesc(myPlant)
                 .stream()
@@ -150,11 +198,13 @@ public class DiagnosisService {
                 .collect(Collectors.toList());
     }
 
+    /**
+     * 진단 상세 조회
+     */
     @Transactional(readOnly = true)
     public DiagnosisResponseDto findById(Long diagnosisId) {
         DiagnosisHistory history = diagnosisHistoryRepository.findById(diagnosisId)
-                .orElseThrow(() -> new EntityNotFoundException("Diagnosis History not found: " + diagnosisId));
-
+                .orElseThrow(() -> new RuntimeException("History not found"));
         return DiagnosisResponseDto.from(history);
     }
 }
